Trying to fix broken CSS

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -133,7 +133,7 @@ aside {
       line-height: 1;
     }
     h1 {
-      font-size: 1.4em;
+      font-size: 1.5em;
       text-align: left;
       letter-spacing: -1px;
       margin-bottom: 3px;
